# lark-wiki-to-kb

./: .gitignore  README.md
py-llm-wiki/: .gitignore  README.md  pyproject.toml  requirements.txt  serve_demo.py
py-llm-wiki/llm_wiki/: __init__.py  api.py  blocks.py  cli.py  config.py  embedding.py  frontmatter.py  graph.py  gui.py  ingest.py  lark.py  lint.py  llm.py  loaders.py  prompts.py  query.py  search.py  store.py  templates.py  vectorstore.py
py-llm-wiki/llm_wiki/web/: app.js  index.html  style.css
py-llm-wiki/sample-notes/: cot.md
